objects/OUV_Vehicle_Utilization__c.object
<CustomObject>
    <label>OUV Vehicle Utilisation</label>
    <nameField>
        <displayFormat>U-{000000000}</displayFormat>
        <label>OUV Vehicle Utilisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Vehicle Utilisation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>OUV_Day__c</fullName>
        <label>Day</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>OUV Vehicle Utilisation</relationshipLabel>
        <relationshipName>OUV_Vehicle_Utilization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Minutes_Used__c</fullName>
        <formula>OUV_Minutes_Before_8am__c + OUV_Minutes_8am_6pm__c + OUV_Minutes_after_6pm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Minutes Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Minutes_8am_6pm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes 8am - 6pm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Minutes_after_6pm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes after 6pm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Minutes_Before_8am__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes Before 8am</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_24_Hour_Utilisation__c</fullName>
        <formula>Total_Minutes_Used__c / (24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Hour Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_8am_6pm_Utilisation__c</fullName>
        <formula>OUV_Minutes_8am_6pm__c / (10 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8am-6pm Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_8hr_Day_Utilisation__c</fullName>
        <formula>IF( Total_Minutes_Used__c &gt; (8*60), 1,Total_Minutes_Used__c /(8*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8hr Day Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_After_6pm_Utilisation__c</fullName>
        <formula>OUV_Minutes_after_6pm__c / (6 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After 6pm Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_Before_8am_Utilisation__c</fullName>
        <formula>OUV_Minutes_Before_8am__c / (8 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Before 8am Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>